--- a/website/pyproject.toml
+++ b/website/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "fpdf>=1.7.2",
     "googlesearch-python>=1.3.0",
     "ollama>=0.5.1",
+    "pdfkit>=1.0.0",
     "pypdf2>=3.0.1",
     "python-docx>=1.1.2",
     "python-magic>=0.4.27",
